--- a/minecraft.service
+++ b/minecraft.service
@@ -1,10 +1,15 @@
 [Unit]
 Description=Minecraft Docker Server
-Requires=minecraft.socket
-After=network.target
+After=network-online.target docker.service
+Wants=network-online.target docker.service
 
 [Service]
-Type=simple
-ExecStart=/usr/bin/docker docker run -d -p 25565:25565 --name serb --restart=on-failure minecraft-create-server
-ExecStop=/usr/bin/docker stop serb
-Restart=always
+Type=oneshot
+ExecStart=/usr/bin/docker compose up -d
+ExecStop=/usr/bin/docker compose down
+WorkingDirectory=/opt/minecraft
+Restart=no
+RemainAfterExit=yes
+
+[Install]
+WantedBy=multi-user.target
